# chordparser-web

./: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
src/: lib.rs
www/: package-lock.json  package.json  tailwind.config.ts
www/app/: globals.css  layout.tsx  page.tsx
www/app/components/: Footer.tsx  Header.tsx  Introduction.tsx  Parser.tsx  Renderer.tsx
www/app/pkg/: README.md  chord_parser_demo.d.ts  chord_parser_demo.js  chord_parser_demo_bg.js  chord_parser_demo_bg.wasm  chord_parser_demo_bg.wasm.d.ts  package.json
www/app/utils/: formatErrors.ts  notes.ts  playChord.ts
