[package]
name = "chord_parser_demo"
version = "0.1.0"
authors = ["pausala <pau.salaf@gmail.com>"]
edition = "2018"

[toolchain]
channel = "1.72.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
chordparser = "2.1.2"
lazy_static = "1.5.0"
serde = "1.0.214"
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.72"
features = [
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[build]
strip = true

[profile.dev]
strip = true

[profile.release]
lto = true
opt-level = 'z'
strip = true
